# blpkd

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-api.txt  requirements-gpu.txt  requirements.txt
core/abstractions/: queue.py  storage.py  vector_store.py
core/config/: logging.py  settings.py
core/models/: database.py  repository.py
docs/: CCTV_CONFIGURATION.md  FEATURE.md  QUICKSTART.md  SCALING_GUIDE.md  TRAINING_GUIDE.md
docs/api/: REST_API.md
infrastructure/docker/: Dockerfile.api  Dockerfile.gpu_worker  Dockerfile.worker
infrastructure/monitoring/: prometheus.yml
infrastructure/nginx/: nginx.conf
scripts/setup/: init_db.py
scripts/training/: train_activity_recognizer.py  train_clothing_classifier.py
services/: __init__.py
services/api/: dependencies.py  main.py
services/api/middleware/: logging_middleware.py
services/api/routers/: analytics.py  auth.py  faces.py  schemas.py  streams.py  videos.py  webhooks.py
services/attribute_analyzer/: color_detector.py
services/compressor/: ffmpeg_wrapper.py
services/detector/: yolo_detector.py
services/face_engine/: recognizer.py
services/video_processor/: stream_reader.py
storage/migrations/: init.sql
tests/integration/: test_api.py
tests/unit/: test_detector.py
workers/: celery_app.py  detection_tasks.py
